Sort properties before writing